@@ -833,14 +833,16 @@ cm_code (int arg)
         { /* Use <samp> tag in general to get typewriter.  */
           if (arg == START)
             { /* If @samp specifically, add quotes a la TeX output.  */
-              if (STREQ (command, "samp")) add_char ('`');
+              if (STREQ (command, "samp"))
+		add_word ("&lsquo;");
               add_word ("<samp>");
             }
           insert_html_tag_with_attribute (arg, "span", "class=\"%s\"",command);
           if (arg == END)
             {
               add_word ("</samp>");
-              if (STREQ (command, "samp")) add_char ('\'');
+              if (STREQ (command, "samp"))
+		add_word ("&rsquo;");
             }
         }
     }
