@@ -1,3 +1,8 @@
+2005-07-31  Per Bothner  <per@bothner.com>
+
+	* makeinfo/cmds.c (cm_code): For html output use lsquo and rsquot
+	entities around @samp.
+
 2005-07-10  Stepan Kasal  <kasal@ucw.cz>
 
 	* doc/texinfo.tex (\texinfoversion): Update.
